update login page

--- a/front-end/connexion.html
+++ b/front-end/connexion.html
@@ -25,13 +25,13 @@
 
     <div class="container">
         <!-- Formulaire d'inscription -->
-        <div class="form-container">
+        <div class="form-container1">
             <h2>Inscription</h2>
             <!-- ... Votre formulaire d'inscription ici ... -->
         </div>
 
         <!-- Formulaire de connexion -->
-        <div class="form-container">
+        <div class="form-container2">
             <h2>Connexion</h2>
             <!-- ... Votre formulaire de connexion ici ... -->
         </div>
@@ -40,16 +40,16 @@
     <footer>
         <div class="footer-icons">
             <a href="#" class="footer-link">
-                <img src="/images/home-icon.png" alt="Accueil" class="footer-icon">
+                <img src="img/home.png" alt="Accueil" class="footer-icon">
             </a>
             <a href="#" class="footer-link">
-                <img src="/images/inscription-icon.png" alt="Inscription" class="footer-icon">
+                <img src="img/inscription.png" alt="Inscription" class="footer-icon">
             </a>
             <a href="#" class="footer-link">
-                <img src="/images/contact-icon.png" alt="Contact" class="footer-icon">
+                <img src="img/phone.png" alt="Contact" class="footer-icon">
             </a>
         </div>
-        <p>© 2024 Mon Vide Grenier</p>
+        <p>© 2024 Trésorsdhier</p>
     </footer>
 
 </body>
