update 2 login page

--- a/front-end/connexion.html
+++ b/front-end/connexion.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style2.css">
     <title>Vide Grenier en Ligne</title>
 </head>
 
@@ -17,6 +17,7 @@
             </div>
             <nav class="main-navigation">
                 <a href="#" class="nav-link">Accueil</a>
+                <a href="#" class="nav-link">Connexion</a>
                 <a href="#" class="nav-link">Articles</a>
                 <a href="#" class="nav-link">Contact</a>
             </nav>
