add link for changes page in home and login

--- a/front-end/Accueil.html
+++ b/front-end/Accueil.html
@@ -19,9 +19,9 @@
                 <a href="#" class="nav-link">Articles</a>
                 <a href="#" class="nav-link">Vendre</a>
                 <a href="#" class="nav-link">Contact</a>
-                <a href="#" class="nav-link">Accueil</a>
+                <a href="Accueil.html" class="nav-link">Accueil</a>
                 <a href="#" class="nav-link">Mon-panier</a>
-                <a href="#" class="nav-link">Connexion</a>
+                <a href="connexion.html" class="nav-link">Connexion</a>
             </nav>
         </div>
     </header>
