--- a/front-end/connexion.html
+++ b/front-end/connexion.html
@@ -16,10 +16,12 @@
                 <img src="img/logo.png" alt="Mon Vide Grenier Logo" class="site-logo">
             </div>
             <nav class="main-navigation">
-                <a href="#" class="nav-link">Accueil</a>
-                <a href="#" class="nav-link">Connexion</a>
                 <a href="#" class="nav-link">Articles</a>
+                <a href="#" class="nav-link">Vendre</a>
                 <a href="#" class="nav-link">Contact</a>
+                <a href="Accueil.html" class="nav-link">Accueil</a>
+                <a href="#" class="nav-link">Mon-panier</a>
+                <a href="connexion.html" class="nav-link">Connexion</a>
             </nav>
         </div>
     </header>
