update style.css for home and login

--- a/front-end/Articles.html
+++ b/front-end/Articles.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style-login.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Vide Grenier en Ligne</title>
 </head>
 
@@ -27,16 +27,18 @@
     </header>
 
     <div class="container">
-        <!-- Formulaire d'inscription -->
-        <div class="form-container1">
-            <h2>Inscription</h2>
-            <!-- ... Votre formulaire d'inscription ici ... -->
+        <h1>Bienvenue !</h1>
+        <div class="achat">
+            <h2>Reliques délaissées,<br>
+                trésors convoités !
+            </h2>
+            <p class="link-achat">Jetez-y un œil</p>
         </div>
-
-        <!-- Formulaire de connexion -->
-        <div class="form-container2">
-            <h2>Connexion</h2>
-            <!-- ... Votre formulaire de connexion ici ... -->
+        <div class="vente">
+            <h2>Les reliques des uns fait,<br>
+                le trésor des autres !
+            </h2>
+            <p class="link-vente">Vendez l'encombrant</p>
         </div>
     </div>
 
