--- a/front-end/Articles.html
+++ b/front-end/Articles.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-article.css">
     <title>Vide Grenier en Ligne</title>
 </head>
 
@@ -27,18 +27,9 @@
     </header>
 
     <div class="container">
-        <h1>Bienvenue !</h1>
-        <div class="achat">
-            <h2>Reliques délaissées,<br>
-                trésors convoités !
-            </h2>
-            <p class="link-achat">Jetez-y un œil</p>
-        </div>
-        <div class="vente">
-            <h2>Les reliques des uns fait,<br>
-                le trésor des autres !
-            </h2>
-            <p class="link-vente">Vendez l'encombrant</p>
+        <h1>Articles</h1>
+        <div class="list">
+            <p>LES articles</p>
         </div>
     </div>
 
