add places in articles

--- a/front-end/Articles.html
+++ b/front-end/Articles.html
@@ -28,8 +28,13 @@
 
     <div class="container">
         <h1>Articles</h1>
-        <div class="list">
-            <p>LES articles</p>
+        <div class="flex-list">
+            <div class="place1">Objet</div>
+            <div class="place2">Jeux</div>
+            <div class="place3">Scolaire</div>
+            <div class="place4">Maison</div>
+            <div class="place5">Accessoires</div>
+            <div class="place6">Outils</div>
         </div>
     </div>
 
