add update page html and css

--- a/front-end/Vendre.html
+++ b/front-end/Vendre.html
@@ -35,7 +35,9 @@
             <div class="place4">Marque</div>
             <div class="place5">Etat</div>
             <div class="place6">Prix</div>
+            <div class="sell">Vendre</div>
         </div>
+        
     </div>
 
     <footer>
