add link of navigation

--- a/front-end/Articles.html
+++ b/front-end/Articles.html
@@ -17,7 +17,7 @@
             </div>
             <nav class="main-navigation">
                 <a href="Articles.html" class="nav-link">Articles</a>
-                <a href="#" class="nav-link">Vendre</a>
+                <a href="Vendre.html" class="nav-link">Vendre</a>
                 <a href="#" class="nav-link">Contact</a>
                 <a href="Accueil.html" class="nav-link">Accueil</a>
                 <a href="#" class="nav-link">Mon-panier</a>
