--- a/front-end/Accueil.html
+++ b/front-end/Accueil.html
@@ -16,7 +16,7 @@
                 <img src="img/logo.png" alt="Mon Vide Grenier Logo" class="site-logo">
             </div>
             <nav class="main-navigation">
-                <a href="#" class="nav-link">Articles</a>
+                <a href="Articles.html" class="nav-link">Articles</a>
                 <a href="Vendre.html" class="nav-link">Vendre</a>
                 <a href="#" class="nav-link">Contact</a>
                 <a href="Accueil.html" class="nav-link">Accueil</a>
