add contact page and change place of main navigation

--- a/front-end/Contact.html
+++ b/front-end/Contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style-article.css">
+    <link rel="stylesheet" href="css/style-vendre.css">
     <title>Vide Grenier en Ligne</title>
 </head>
 
@@ -27,15 +27,10 @@
     </header>
 
     <div class="container">
-        <h1>Articles</h1>
-        <div class="flex-list">
-            <div class="place1">Objet</div>
-            <div class="place2">Jeux</div>
-            <div class="place3">Scolaire</div>
-            <div class="place4">Maison</div>
-            <div class="place5">Accessoires</div>
-            <div class="place6">Outils</div>
-        </div>
+        <h1>Contact</h1>
+        <p>Vous pouvez rester en contact avec notre service technique et demander de l'aide au :</p>
+        <p>xx-xx-xx-xx</p>
+        <p>Ou par email sur brocante@network.com</p>        
     </div>
 
     <footer>
