update contact page and change place of main navigation

--- a/front-end/Contact.html
+++ b/front-end/Contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style-vendre.css">
+    <link rel="stylesheet" href="css/style-contact.css">
     <title>Vide Grenier en Ligne</title>
 </head>
 
@@ -28,20 +28,23 @@
 
     <div class="container">
         <h1>Contact</h1>
-        <p>Vous pouvez rester en contact avec notre service technique et demander de l'aide au :</p>
-        <p>xx-xx-xx-xx</p>
-        <p>Ou par email sur brocante@network.com</p>        
+        <div class="tell">
+            <p> <b>Vous pouvez rester en contact avec notre service technique
+                et demander de l'aide au :</b> </p>
+            <p> <b>0X-XX-XX-XX ou par email sur tresorsdhier@network.com</b> </p>
+        </div>
+    
     </div>
 
     <footer>
         <div class="footer-icons">
-            <a href="#" class="footer-link">
+            <a href="Accueil.html" class="footer-link">
                 <img src="img/home.png" alt="Accueil" class="footer-icon">
             </a>
-            <a href="#" class="footer-link">
+            <a href="connexion.html" class="footer-link">
                 <img src="img/inscription.png" alt="Inscription" class="footer-icon">
             </a>
-            <a href="#" class="footer-link">
+            <a href="Contact.html" class="footer-link">
                 <img src="img/phone.png" alt="Contact" class="footer-icon">
             </a>
         </div>
