--- a/front-end/Vendre.html
+++ b/front-end/Vendre.html
@@ -42,13 +42,13 @@
 
     <footer>
         <div class="footer-icons">
-            <a href="#" class="footer-link">
+            <a href="Accueil.html" class="footer-link">
                 <img src="img/home.png" alt="Accueil" class="footer-icon">
             </a>
-            <a href="#" class="footer-link">
+            <a href="connexion.html" class="footer-link">
                 <img src="img/inscription.png" alt="Inscription" class="footer-icon">
             </a>
-            <a href="#" class="footer-link">
+            <a href="Contact.html" class="footer-link">
                 <img src="img/phone.png" alt="Contact" class="footer-icon">
             </a>
         </div>
