update login page

--- a/front-end/connexion.html
+++ b/front-end/connexion.html
@@ -46,6 +46,9 @@
                 <input type="password" id="motdepasse" name="motdepasse" placeholder="Entrez votre mot de passe">
             </div>
             <button type="submit">S'inscrire</button>
+            <p>ou</p>
+            <button type="submit">Identifiant/mot de passe oublié</button>
+            
             </div>
         </div>
         
