add link home with picture

--- a/front-end/connexion.html
+++ b/front-end/connexion.html
@@ -13,7 +13,7 @@
     <header class="site-header">
         <div class="header-inner">
             <div class="logo-container">
-                <img src="img/logo.png" alt="Mon Vide Grenier Logo" class="site-logo">
+                <a href="Accueil.html"> <img src="img/logo.png" alt="Mon Vide Grenier Logo" class="site-logo"> </a>
             </div>
             <nav class="main-navigation">
                 <a href="Articles.html" class="nav-link">Articles</a>
@@ -70,6 +70,13 @@
         </div>
     </div>
 
+    <script>
+        function connectWithGoogle() {
+            // Ajoutez ici la logique pour la connexion avec Google
+            alert("Connecté avec Google !");
+        }
+    </script>
+
     <footer>
         <div class="footer-icons">
             <a href="Accueil.html" class="footer-link">
@@ -84,13 +91,6 @@
         </div>
         <p>© 2024 Trésorsdhier</p>
     </footer>
-
-    <script>
-        function connectWithGoogle() {
-            // Ajoutez ici la logique pour la connexion avec Google
-            alert("Connecté avec Google !");
-        }
-    </script>
 
 </body>
 
