update infos for home

--- a/front-end/Accueil.html
+++ b/front-end/Accueil.html
@@ -32,13 +32,28 @@
             <h2>Reliques délaissées,<br>
                 trésors convoités !
             </h2>
-            <p class="link-achat">Jetez-y un œil</p>
+            <p>
+                À la recherche d'un trésors inattendus ?<br>
+                Regardez notre collection et laissez-vous surprendre
+                par des découvertes étonnantes qui n'attendent que vous.
+            </p>
+            <a href="Articles.html">
+            <p class="link-achat">Jetez-y un œil !</p>
+            </a>
         </div>
         <div class="vente">
-            <h2>Les reliques des uns fait,<br>
+            <h2>Les reliques des uns, font<br>
                 le trésor des autres !
             </h2>
-            <p class="link-vente">Vendez l'encombrant</p>
+            <p>
+                Besoin de faire le tri ?<br>
+                Partagez vos propres trésors avec notre communauté,
+                en leur offrant une seconde chance d'être appréciés et
+                utiles.
+            </p>
+            <a href="Vendre.html">
+            <p class="link-vente">Vendez l'encombrant !</p>
+            </a>
         </div>
     </div>
 
