update all pages and add mon-panier page

--- a/front-end/Vendre.html
+++ b/front-end/Vendre.html
@@ -25,7 +25,7 @@
                 <a href="Vendre.html" class="nav-link">Vendre</a>
                 <a href="Contact.html" class="nav-link">Contact</a>
                 <a href="Accueil.html" class="nav-link">Accueil</a>
-                <a href="#" class="nav-link">Mon-panier</a>
+                <a href="panier.html" class="nav-link">Mon-panier</a>
                 <a href="connexion.html" class="nav-link">Connexion</a>
             </nav>
         </div>
