--- a/front-end/panier.html
+++ b/front-end/panier.html
@@ -4,8 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style-forgot.css">
+    <link rel="stylesheet" href="css/style-panier.css">
     <title>Vide Grenier en Ligne</title>
+    <script src="js/main.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/uploade.js"></script>
+    <script src="js/appp.js"></script>
+    <script src="js/publication.js"> </script>
 </head>
 
 <body>
@@ -13,7 +18,7 @@
     <header class="site-header">
         <div class="header-inner">
             <div class="logo-container">
-                <a href="Accueil.html"> <img src="img/logo.png" alt="Mon Vide Grenier Logo" class="site-logo"> </a>
+                <img src="img/logo.png" alt="Mon Vide Grenier Logo" class="site-logo">
             </div>
             <nav class="main-navigation">
                 <a href="Articles.html" class="nav-link">Articles</a>
@@ -27,14 +32,16 @@
     </header>
 
     <div class="container">
-        <div class="forgot">
-            <h2>Réinitialisation du mot de passe</h2>
-            <p>Indiquez votre Email pour changer de mot de passe</p>
-            <div class="field">
-                <label for="email">Email :</label>
-                <input type="text" id="email" placeholder="Entrez votre email">
+        <h1>Mon Panier</h1>
+        <div class="details">
+            <div class="place1">
+                <p>
+                    Connectez-vous pour enregistrer vos articles dans votre panier.
+                </p>
+                <a href="connexion.html">
+                <button class="button" type="submit">Se connecter</button>
+                </a>
             </div>
-            <button type="submit">Réinitialiser</button>
         </div>
     </div>
 
@@ -49,10 +56,14 @@
             <a href="Contact.html" class="footer-link">
                 <img src="img/phone.png" alt="Contact" class="footer-icon">
             </a>
+
         </div>
         <p>© 2024 Trésorsdhier</p>
     </footer>
+    <script></script>
+
 
 </body>
+
 
 </html>
