add articles in maison

--- a/front-end/maison.html
+++ b/front-end/maison.html
@@ -29,12 +29,42 @@
     <div class="container">
         <h1>Maison</h1>
         <div class="flex-list">
-            <div class="place1"><img src="img/articles/Maison/fauteuil.jpg" alt="fauteuil"></div>
-            <div class="place2"><img src="img/articles/Maison/chaise.jpg" alt="chaise"></div>
-            <div class="place3"><img src="img/articles/Maison/bureau.jpg" alt="bureau"></div>
-            <div class="place4"><img src="img/articles/Maison/tapis.jpg" alt="tapis"></div>
-            <div class="place5"><img src="img/articles/Maison/mirroir.jpg" alt="mirroir"></div>
-            <div class="place6"><img src="img/articles/Maison/panier-linge.jpg" alt="panier à linge"></div>
+            <div class="place1">
+                <img src="img/articles/Maison/fauteuil.jpg" alt="fauteuil"> 
+                <p>Fauteuil</p>
+                <p>Bon état</p>
+                <p>60€</p>
+            </div>
+            <div class="place2">
+                <img src="img/articles/Maison/chaise.jpg" alt="chaise">
+                <p>Chaise</p>
+                <p>Très bon état</p>
+                <p>8€</p>
+            </div>
+            <div class="place3">
+                <img src="img/articles/Maison/bureau.jpg" alt="bureau" class="bureau">
+                <p>Bureau</p>
+                <p>Bon état</p>
+                <p>160€</p>
+            </div>
+            <div class="place4">
+                <img src="img/articles/Maison/tapis.jpg" alt="tapis">
+                <p>Tapis</p>
+                <p>Satisfaisant</p>
+                <p>10€</p>
+            </div>
+            <div class="place5">
+                <img src="img/articles/Maison/mirroir.jpg" alt="mirroir">
+                <p>Mirroir</p>
+                <p>Satisfaisant</p>
+                <p>12€</p>
+            </div>
+            <div class="place6">
+                <img src="img/articles/Maison/panier-linge.jpg" alt="panier à linge">
+                <p>Panier à Linge</p>
+                <p>Satisfaisant</p>
+                <p>13€</p>
+            </div>
         </div>
     </div>
 
