--- a/front-end/outils.html
+++ b/front-end/outils.html
@@ -29,12 +29,42 @@
     <div class="container">
         <h1>Outils</h1>
         <div class="flex-list">
-            <div class="place1"><img src="img/articles/Outils/marteau.jpg" alt="marteau"></div>
-            <div class="place2"><img src="img/articles/Outils/clef-molette.jpg" alt="clef à molette"></div>
-            <div class="place3"><img src="img/articles/Outils/tournevis.jpg" alt="tournevis"></div>
-            <div class="place4"><img src="img/articles/Outils/metre-ruban.jpg" alt="metre ruban"></div>
-            <div class="place5"><img src="img/articles/Outils/pince.jpg" alt="pince"></div>
-            <div class="place6"><img src="img/articles/Outils/pinceau.jpg" alt="pinceau"></div>
+            <div class="place1">
+                <img src="img/articles/Outils/marteau.jpg" alt="marteau">
+                <p>Marteau</p>
+                <p>Satisfaisant</p>
+                <p>13€</p>
+            </div>
+            <div class="place2">
+                <img src="img/articles/Outils/clef-molette.jpg" alt="clef à molette">
+                <p>Clef à molette</p>
+                <p>Bon état</p>
+                <p>12€</p>
+            </div>
+            <div class="place3">
+                <img src="img/articles/Outils/tournevis.jpg" alt="tournevis">
+                <p>Tournevis</p>
+                <p>Légèrement usé</p>
+                <p>7€</p>
+            </div>
+            <div class="place4">
+                <img src="img/articles/Outils/metre-ruban.jpg" alt="metre ruban">
+                <p>Metre ruban</p>
+                <p>Très bon état</p>
+                <p>4€</p>
+            </div>
+            <div class="place5">
+                <img src="img/articles/Outils/pince.jpg" alt="pince">
+                <p>Chaise</p>
+                <p>Bon état</p>
+                <p>3€</p>
+            </div>
+            <div class="place6">
+                <img src="img/articles/Outils/pinceau.jpg" alt="pinceau">
+                <p>Pinceau</p>
+                <p>Stisfaisant</p>
+                <p>11€</p>
+            </div>
         </div>
     </div>
 
