--- a/front-end/scolaire.html
+++ b/front-end/scolaire.html
@@ -29,12 +29,42 @@
     <div class="container">
         <h1>Scolaire</h1>
         <div class="flex-list">
-            <div class="place1"><img src="img/articles/Scolaire/cachier.jpg" alt="cahier"></div>
-            <div class="place2"><img src="img/articles/Scolaire/cartable.jpg" alt="cartable"></div>
-            <div class="place3"><img src="img/articles/Scolaire/classeur.jpg" alt="classeur"></div>
-            <div class="place4"><img src="img/articles/Scolaire/feuille-double.jpg" alt="copies doubles"></div>
-            <div class="place5"><img src="img/articles/Scolaire/stylot.jpg" alt="stylot"></div>
-            <div class="place6"><img src="img/articles/Scolaire/trousse.jpg" alt="trousse"></div>
+            <div class="place1">
+                <img src="img/articles/Scolaire/cachier.jpg" alt="cahier">
+                <p>Cahier</p>
+                <p>Bon état</p>
+                <p>2,50€</p>
+            </div>
+            <div class="place2">
+                <img src="img/articles/Scolaire/cartable.jpg" alt="cartable">
+                <p>Cartable</p>
+                <p>Satisfaisant</p>
+                <p>15€</p>
+            </div>
+            <div class="place3">
+                <img src="img/articles/Scolaire/classeur.jpg" alt="classeur">
+                <p>Classeur</p>
+                <p>Satisfaisant</p>
+                <p>5€</p>
+            </div>
+            <div class="place4">
+                <img src="img/articles/Scolaire/feuille-double.jpg" alt="copies doubles">
+                <p>Feuilles copies double</p>
+                <p>Très bon état</p>
+                <p>2€</p>
+            </div>
+            <div class="place5">
+                <img src="img/articles/Scolaire/stylot.jpg" alt="stylo">
+                <p>Stylos</p>
+                <p>Bon état</p>
+                <p>1€</p>
+            </div>
+            <div class="place6">
+                <img src="img/articles/Scolaire/trousse.jpg" alt="trousse">
+                <p>Trousse</p>
+                <p>Satisfaisant</p>
+                <p>x€</p>
+            </div>
         </div>
     </div>
 
