--- a/front-end/accessoires.html
+++ b/front-end/accessoires.html
@@ -29,12 +29,42 @@
     <div class="container">
         <h1>Accessoires</h1>
         <div class="flex-list">
-            <div class="place1"><img src="img/articles/Accessoires/chaussuresH.jpg" alt="chaussures pour homme"></div>
-            <div class="place2"><img src="img/articles/Accessoires/ChaussuresF.jpg" alt="chaussures pour femme"></div>
-            <div class="place3"><img src="img/articles/Accessoires/montre.jpg" alt="montre"></div>
-            <div class="place4"><img src="img/articles/Accessoires/sac-main.jpg" alt="sac à main"></div>
-            <div class="place5"><img src="img/articles/Accessoires/trousse-ongleH.jpg" alt="trousse à ongle"></div>
-            <div class="place6"><img src="img/articles/Accessoires/trousse-maquillage.jpg" alt="trousse de maquillage"></div>
+            <div class="place1">
+                <img src="img/articles/Accessoires/chaussuresH.jpg" alt="chaussures pour homme">
+                <p>Chaussures pour homme</p>
+                <p>Satisfaisant</p>
+                <p>25€</p>
+            </div>
+            <div class="place2">
+                <img src="img/articles/Accessoires/ChaussuresF.jpg" alt="chaussures pour femme">
+                <p>Chaussures pour femme</p>
+                <p>Satisfaisant</p>
+                <p>25€</p>
+            </div>
+            <div class="place3">
+                <img src="img/articles/Accessoires/montre.jpg" alt="montre">
+                <p>Montre</p>
+                <p>Bon état</p>
+                <p>55€</p>
+            </div>
+            <div class="place4">
+                <img src="img/articles/Accessoires/sac-main.jpg" alt="sac à main">
+                <p>Sac à main</p>
+                <p>Satisfaisant</p>
+                <p>x€</p>
+            </div>
+            <div class="place5">
+                <img src="img/articles/Accessoires/trousse-ongleH.jpg" alt="trousse manicure">
+                <p>Trousse de manicure</p>
+                <p>Bon état</p>
+                <p>20€</p>
+            </div>
+            <div class="place6">
+                <img src="img/articles/Accessoires/trousse-maquillage.jpg" alt="trousse de maquillage">
+                <p>Trousse de maquillage</p>
+                <p>Satisfaisant</p>
+                <p>11€</p>
+            </div>
         </div>
     </div>
 
