--- a/front-end/objet.html
+++ b/front-end/objet.html
@@ -29,12 +29,42 @@
     <div class="container">
         <h1>Objets</h1>
         <div class="flex-list">
-            <div class="place1"> <img src="img/articles/Objets/vase.jpg" alt="vase"> </div>
-            <div class="place2"><img src="img/articles/Objets/tableau.jpg" alt="tableau"></div>
-            <div class="place3"><img src="img/articles/Objets/statuette.jpg" alt="statuette"></div>
-            <div class="place4"><img src="img/articles/Objets/bougie.jpg" alt="bougie"></div>
-            <div class="place5"><img src="img/articles/Objets/assiette.jpg" alt="assiette"></div>
-            <div class="place6"><img src="img/articles/Objets/couverts.jpg" alt="couverts"></div>
+            <div class="place1">
+                <img src="img/articles/Objets/vase.jpg" alt="vase">
+                <p>Vase</p>
+                <p>Très bon état</p>
+                <p>120€</p>
+            </div>
+            <div class="place2">
+                <img src="img/articles/Objets/tableau.jpg" alt="tableau">
+                <p>Tableau</p>
+                <p>Très bon état</p>
+                <p>110€</p>
+            </div>
+            <div class="place3">
+                <img src="img/articles/Objets/statuette.jpg" alt="statuette">
+                <p>statuette</p>
+                <p>Bon état</p>
+                <p>100€</p>
+            </div>
+            <div class="place4">
+                <img src="img/articles/Objets/bougie.jpg" alt="bougie">
+                <p>Bougie</p>
+                <p>Légèrement utilisé</p>
+                <p>4€</p>
+            </div>
+            <div class="place5">
+                <img src="img/articles/Objets/assiette.jpg" alt="assiette">
+                <p>Assiette</p>
+                <p>Bon état</p>
+                <p>11€</p>
+            </div>
+            <div class="place6">
+                <img src="img/articles/Objets/couverts.jpg" alt="couverts">
+                <p>Couverts</p>
+                <p>Neuf</p>
+                <p>6€</p>
+            </div>
         </div>
     </div>
 
