--- a/front-end/outils.html
+++ b/front-end/outils.html
@@ -55,7 +55,7 @@
             </div>
             <div class="place5">
                 <img src="img/articles/Outils/pince.jpg" alt="pince">
-                <p>Chaise</p>
+                <p>Pince</p>
                 <p>Bon état</p>
                 <p>3€</p>
             </div>
