add link tell and mail anf update design pages

--- a/front-end/Accueil.html
+++ b/front-end/Accueil.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="container">
-        <h1>Bienvenue !</h1>
+        <h1 class="site-header">Bienvenue !</h1>
         <div class="achat">
             <h2>Reliques délaissées,<br>
                 trésors convoités !
