--- a/front-end/Contact.html
+++ b/front-end/Contact.html
@@ -27,11 +27,11 @@
     </header>
 
     <div class="container">
-        <h1>Contact</h1>
+        <h1 class="site-header">Contact</h1>
         <div class="tell">
             <p> <b>Vous pouvez rester en contact avec notre service technique
                 et demander de l'aide au :</b> </p>
-            <p> <b>0X-XX-XX-XX ou par email sur tresorsdhier@network.com</b> </p>
+            <p> <b><a class="numero" href="tel:0748382854">Par téléphone</a> ou par email sur <a class="mail" href="mailto:tresorsdhier@network.com">tresorsdhier@network.com</a></b> </p>
         </div>
     
     </div>
