--- a/front-end/Vendre.html
+++ b/front-end/Vendre.html
@@ -32,7 +32,7 @@
     </header>
 
     <div class="container">
-        <h1>Vendre</h1>
+        <h1 class="site-header">Vendre</h1>
         <div class="details">
             <!-- Ajout d'un input de type file pour choisir une photo -->
             <div class="place1">
