--- a/front-end/panier2.html
+++ b/front-end/panier2.html
@@ -32,7 +32,7 @@
     </header>
 
     <div class="container">
-        <h1>Mon Panier</h1>
+        <h1 class="site-header">Mon Panier</h1>
         <!-- Zone où les photos ajoutées seront affichées -->
         <div id="photo-gallery">
             Articles selectionnés:
