--- a/front-end/panier.html
+++ b/front-end/panier.html
@@ -32,7 +32,7 @@
     </header>
 
     <div class="container">
-        <h1>Mon Panier</h1>
+        <h1 class="site-header">Mon Panier</h1>
         <div class="details">
             <div class="place1">
                 <p>
