--- a/front-end/forgot.html
+++ b/front-end/forgot.html
@@ -6,6 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style-forgot.css">
     <title>Vide Grenier en Ligne</title>
+    <script src="js/article.js"></script>
+    <script src="js/button.js"></script>
+    <script src="js/contacts.js"></script>
+    <script src="js/forgot.js"></script>
+    <script src="js/insc.js"> </script>
+    <script src="js/panier.js"></script>
+    <script src="js/panier2.js"></script>
+    <script src="db.js"></script>
+    <script src="js/vendres.js"></script>
+    <script src="node/accueil.js"></script>
+    <script src="node/articles.js"></script>
+    <script src="node/contact.js"></script>
+    <script src="node/inscription.js"></script>
+    <script src="node/paniers.js"></script>
+    <script src="node/paniers2.js"></script>
+    <script src="node/vendre.js"></script>
 </head>
 
 <body>
