update design in articles pages

--- a/front-end/Jeux.html
+++ b/front-end/Jeux.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="container">
-        <h1>Jeux</h1>
+        <h1 class="site-header">Jeux</h1>
         <div class="flex-list">
             <div class="place1">
                 <img src="img/articles/Jeux/Switch.jpg" alt="Nintendo Switch">
