--- a/front-end/maison.html
+++ b/front-end/maison.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="container">
-        <h1>Maison</h1>
+        <h1 class="site-header">Maison</h1>
         <div class="flex-list">
             <div class="place1">
                 <img src="img/articles/Maison/fauteuil.jpg" alt="fauteuil"> 
