--- a/front-end/objet.html
+++ b/front-end/objet.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="container">
-        <h1>Objets</h1>
+        <h1 class="site-header">Objets</h1>
         <div class="flex-list">
             <div class="place1">
                 <img src="img/articles/Objets/vase.jpg" alt="vase">
