--- a/front-end/outils.html
+++ b/front-end/outils.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="container">
-        <h1>Outils</h1>
+        <h1 class="site-header">Outils</h1>
         <div class="flex-list">
             <div class="place1">
                 <img src="img/articles/Outils/marteau.jpg" alt="marteau">
