--- a/front-end/accessoires.html
+++ b/front-end/accessoires.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="container">
-        <h1>Accessoires</h1>
+        <h1 class="site-header">Accessoires</h1>
         <div class="flex-list">
             <div class="place1">
                 <img src="img/articles/Accessoires/chaussuresH.jpg" alt="chaussures pour homme">
