--- a/front-end/scolaire.html
+++ b/front-end/scolaire.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="container">
-        <h1>Scolaire</h1>
+        <h1 class="site-header">Scolaire</h1>
         <div class="flex-list">
             <div class="place1">
                 <img src="img/articles/Scolaire/cachier.jpg" alt="cahier">
