add button in articles pages

--- a/front-end/maison.html
+++ b/front-end/maison.html
@@ -66,6 +66,12 @@
                 <p>13€</p>
             </div>
         </div>
+        <div class="button1">
+            <button type="submit">Ajouter</button>
+        </div>
+        <div class="button2">
+            <button type="submit">Supprimer</button>
+        </div>
     </div>
 
     <footer>
