add button in sell page

--- a/front-end/Vendre.html
+++ b/front-end/Vendre.html
@@ -61,7 +61,9 @@
                 <input type="text" id="price" placeholder="Prix">
             </div>
 
-            <div class="sell">Vendre</div>
+            <div class="button">
+                <button type="submit">Vendre</button>
+            </div>
         </div>
     </div>
 
