add button ajouter au panier in articles pages

--- a/front-end/maison.html
+++ b/front-end/maison.html
@@ -34,36 +34,42 @@
                 <p>Fauteuil</p>
                 <p>Bon état</p>
                 <p>60€</p>
+                <button type="submit">Ajouter au panier</button>
             </div>
             <div class="place2">
                 <img src="img/articles/Maison/chaise.jpg" alt="chaise">
                 <p>Chaise</p>
                 <p>Très bon état</p>
                 <p>8€</p>
+                <button type="submit">Ajouter au panier</button>
             </div>
             <div class="place3">
                 <img src="img/articles/Maison/bureau.jpg" alt="bureau" class="bureau">
                 <p>Bureau</p>
                 <p>Bon état</p>
                 <p>160€</p>
+                <button type="submit">Ajouter au panier</button>
             </div>
             <div class="place4">
                 <img src="img/articles/Maison/tapis.jpg" alt="tapis">
                 <p>Tapis</p>
                 <p>Satisfaisant</p>
                 <p>10€</p>
+                <button type="submit">Ajouter au panier</button>
             </div>
             <div class="place5">
                 <img src="img/articles/Maison/mirroir.jpg" alt="mirroir">
                 <p>Mirroir</p>
                 <p>Satisfaisant</p>
                 <p>12€</p>
+                <button type="submit">Ajouter au panier</button>
             </div>
             <div class="place6">
                 <img src="img/articles/Maison/panier-linge.jpg" alt="panier à linge">
                 <p>Panier à Linge</p>
                 <p>Satisfaisant</p>
                 <p>13€</p>
+                <button type="submit">Ajouter au panier</button>
             </div>
         </div>
         <div class="button1">
