update articles pages

--- a/front-end/scolaire.html
+++ b/front-end/scolaire.html
@@ -32,6 +32,7 @@
             <div class="place1">
                 <img src="img/articles/Scolaire/cachier.jpg" alt="cahier">
                 <p>Cahier</p>
+                <p>Idéal pour vos cours</p>
                 <p>Bon état</p>
                 <p>2,50€</p>
                 <button type="submit">Ajouter au panier</button>
@@ -39,6 +40,7 @@
             <div class="place2">
                 <img src="img/articles/Scolaire/cartable.jpg" alt="cartable">
                 <p>Cartable</p>
+                <p>Idéal pour le transport de matériels</p>
                 <p>Satisfaisant</p>
                 <p>15€</p>
                 <button type="submit">Ajouter au panier</button>
@@ -46,6 +48,7 @@
             <div class="place3">
                 <img src="img/articles/Scolaire/classeur.jpg" alt="classeur">
                 <p>Classeur</p>
+                <p>Idéal pour ranger vos copies</p>
                 <p>Satisfaisant</p>
                 <p>5€</p>
                 <button type="submit">Ajouter au panier</button>
@@ -53,6 +56,7 @@
             <div class="place4">
                 <img src="img/articles/Scolaire/feuille-double.jpg" alt="copies doubles">
                 <p>Feuilles copies double</p>
+                <p>Idéal pour vos examens</p>
                 <p>Très bon état</p>
                 <p>2€</p>
                 <button type="submit">Ajouter au panier</button>
@@ -60,6 +64,7 @@
             <div class="place5">
                 <img src="img/articles/Scolaire/stylot.jpg" alt="stylo">
                 <p>Stylos</p>
+                <p>Idéal pour écrire</p>
                 <p>Bon état</p>
                 <p>1€</p>
                 <button type="submit">Ajouter au panier</button>
@@ -67,6 +72,7 @@
             <div class="place6">
                 <img src="img/articles/Scolaire/trousse.jpg" alt="trousse">
                 <p>Trousse</p>
+                <p>Idéal pour ranger vos outils scolaires</p>
                 <p>Satisfaisant</p>
                 <p>5€</p>
                 <button type="submit">Ajouter au panier</button>
