--- a/front-end/connexion.html
+++ b/front-end/connexion.html
@@ -1,31 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style-login.css">
     <title>Vide Grenier en Ligne</title>
-    <script src="js/article.js"></script>
-    <script src="js/button.js"></script>
-    <script src="js/contacts.js"></script>
-    <script src="js/forgot.js"></script>
-    <script src="js/insc.js"> </script>
-    <script src="js/panier.js"></script>
-    <script src="js/panier2.js"></script>
-    <script src="db.js"></script>
-    <script src="js/vendres.js"></script>
-    <script src="node/accueil.js"></script>
-    <script src="node/articles.js"></script>
-    <script src="node/contact.js"></script>
-    <script src="node/inscription.js"></script>
-    <script src="node/paniers.js"></script>
-    <script src="node/paniers2.js"></script>
-    <script src="node/vendre.js"></script>
 </head>
-
 <body>
-
     <header class="site-header">
         <div class="header-inner">
             <div class="logo-container">
@@ -43,57 +24,48 @@
     </header>
 
     <div class="container">
-        <div class="login">
+        <!-- Section Inscription -->
+        <div class="inscription">
             <h2>Inscription</h2>
-            <div class="field">
-                <label for="nom">Nom :</label>
-                <input type="text" id="nom" placeholder="Entrez votre nom">
-            </div>
-            <div class="field">
-                <label for="prenom">Prénom :</label>
-                <input type="text" id="prenom" name="prenom" placeholder="Entrez votre prénom">
-            </div>
-            <div class="field">
-                <label for="email">Email :</label>
-                <input type="email" id="email" name="email" placeholder="Entrez votre email">
-            </div>
-            <div class="field">
-                <label for="motdepasse">Mot de passe :</label>
-                <input type="password" id="motdepasse" name="motdepasse" placeholder="Entrez votre mot de passe">
-            </div>
-            <button type="submit">S'inscrire</button>
-            <p>ou</p>
-            <button type="button" onclick="connectWithGoogle()">
-                Se connecter avec Google
-            </button>
-
+            <form id="register-form">
+                <div class="field">
+                    <label for="register-nom">Nom :</label>
+                    <input type="text" id="register-nom" placeholder="Entrez votre nom" required>
+                </div>
+                <div class="field">
+                    <label for="register-prenom">Prénom :</label>
+                    <input type="text" id="register-prenom" placeholder="Entrez votre prénom" required>
+                </div>
+                <div class="field">
+                    <label for="register-email">Email :</label>
+                    <input type="email" id="register-email" placeholder="Entrez votre email" required>
+                </div>
+                <div class="field">
+                    <label for="register-password">Mot de passe :</label>
+                    <input type="password" id="register-password" placeholder="Entrez votre mot de passe" required>
+                </div>
+                <button type="submit">S'inscrire</button>
+            </form>
         </div>
-        
+
+        <!-- Section Connexion -->
         <div class="connexion">
             <h2>Connexion</h2>
-            <div class="field">
-                <label for="email">Email :</label>
-                <input type="text" id="email" placeholder="Entrez votre email">
-            </div>
-            <div class="field">
-                <label for="motdepasse_connexion">Mot de passe :</label>
-                <input type="password" id="motdepasse_connexion" name="motdepasse_connexion" placeholder="Entrez votre mot de passe">
-            </div>
-            <button type="submit">Se connecter</button>
+            <form id="login-form">
+                <div class="field">
+                    <label for="login-email">Email :</label>
+                    <input type="email" id="login-email" placeholder="Entrez votre email" required>
+                </div>
+                <div class="field">
+                    <label for="login-password">Mot de passe :</label>
+                    <input type="password" id="login-password" placeholder="Entrez votre mot de passe" required>
+                </div>
+                <button type="submit">Se connecter</button>
+            </form>
             <p>ou</p>
-            <a href="forgot.html">
-            <button type="submit">mot de passe oublié</button>
-            </a>
-
+            <a href="forgot.html">Mot de passe oublié</a>
         </div>
     </div>
-
-    <script>
-        function connectWithGoogle() {
-            // Ajoutez ici la logique pour la connexion avec Google
-            alert("Connecté avec Google !");
-        }
-    </script>
 
     <footer>
         <div class="footer-icons">
@@ -110,6 +82,10 @@
         <p>© 2024 Trésorsdhier</p>
     </footer>
 
-</body>
+    <script src="js/app.js"></script>
+	<script src="js/inscription.js"></script>
 
+    <script src="js/connexion.js"></script>
+
+</body>
 </html>
