update sell page

--- a/front-end/Vendre.html
+++ b/front-end/Vendre.html
@@ -61,9 +61,9 @@
                 <input type="text" id="price" placeholder="Prix">
             </div>
 
-            <div class="sell-button">
+            <form>
                 <button type="submit">Vendre</button>
-            </div>
+            </form>
         </div>
     </div>
 
