--- a/front-end/Vendre.html
+++ b/front-end/Vendre.html
@@ -35,7 +35,7 @@
     <header class="site-header">
         <div class="header-inner">
             <div class="logo-container">
-                <img src="img/logo.png" alt="Mon Vide Grenier Logo" class="site-logo">
+            <a href="Accueil.html"> <img src="img/logo.png" alt="Mon Vide Grenier Logo" class="site-logo">
             </div>
             <nav class="main-navigation">
                 <a href="Articles.html" class="nav-link">Articles</a>
